--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MoviesApp</string>
+    <string name="no_network_message">No network connection</string>
+    <string name="error_message">An error occurred</string>
 </resources>
