--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MoviesApp</string>
     <string name="no_network_message">No network connection</string>
     <string name="error_message">An error occurred</string>
+    <string name="movie_content_description">Movie</string>
 </resources>
